// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddCity weather data Weather data is loading 1`] = `
<div
  className="wrapper"
>
  <div
    className="loader-circle"
  />
  <div
    className="loader-bottom"
  >
    Please wait, weather is loading...
  </div>
</div>
`;

exports[`AddCity weather data Weather data loaded 1`] = `
<div
  className="WeatherBlock"
>
  <div
    className="City"
  >
    London
  </div>
  <div
    className="leftWeather"
  >
    <img
      className="Icon"
      src="https://openweathermap.org/img/wn/09d.png"
    />
    <div
      className="Temp"
    >
      7
       °C
    </div>
    <button
      className="button"
      onClick={[Function]}
    >
      Delete
    </button>
  </div>
  <div
    className="rightWeather"
  >
    <div
      className="Pressure"
    >
      Pressure: 
      1012
       hPa
    </div>
    <div
      className="Humidity"
    >
      Humidity: 
      81
      %
    </div>
    <div
      className="Clouds"
    >
      Clouds: 
      light intensity drizzle
    </div>
    <div
      className="Wind"
    >
      Wind: 
      4.1
       m/s
    </div>
    <div
      className="Coords"
    >
      Coordinates: [
      -0.13
      , 
      51.51
      ]
    </div>
  </div>
</div>
`;

exports[`Geolocation weather data Weather data is loading 1`] = `
<div
  className="wrapper"
>
  <div
    className="loader-circle"
  />
  <div
    className="loader-bottom"
  >
    Please wait, weather is loading...
  </div>
</div>
`;

exports[`Geolocation weather data Weather data loaded 1`] = `
<div
  className="WeatherBlock"
>
  <div
    className="City"
  >
    London
  </div>
  <div
    className="leftWeather"
  >
    <img
      className="Icon"
      src="https://openweathermap.org/img/wn/09d.png"
    />
    <div
      className="Temp"
    >
      7
       °C
    </div>
  </div>
  <div
    className="rightWeather"
  >
    <div
      className="Pressure"
    >
      Pressure: 
      1012
       hPa
    </div>
    <div
      className="Humidity"
    >
      Humidity: 
      81
      %
    </div>
    <div
      className="Clouds"
    >
      Clouds: 
      light intensity drizzle
    </div>
    <div
      className="Wind"
    >
      Wind: 
      4.1
       m/s
    </div>
    <div
      className="Coords"
    >
      Coordinates: [
      -0.13
      , 
      51.51
      ]
    </div>
  </div>
</div>
`;
